--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
-python-telegram-bot==20.8
-yt-dlp
-aiohttp
-psutil
-gdown
+# ─── Telegram framework ─────────────────────────────────────────────────────
+aiogram==3.7.0
+
+# ─── Async HTTP ──────────────────────────────────────────────────────────────
+aiohttp==3.9.5
+
+# ─── Database ────────────────────────────────────────────────────────────────
+aiosqlite==0.20.0
+
+# ─── Downloader ──────────────────────────────────────────────────────────────
+yt-dlp>=2024.1.1
+
+# ─── Environment / config ────────────────────────────────────────────────────
+python-dotenv==1.0.1
+
+# ─── Optional: Google Drive via API ──────────────────────────────────────────
+google-api-python-client==2.131.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+
+# ─── Image processing (default background image) ─────────────────────────────
+Pillow==10.3.0
+
+# ─── Utilities ───────────────────────────────────────────────────────────────
+psutil==5.9.8
