--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 aiogram==3.7.0
 
 # ─── Async HTTP ──────────────────────────────────────────────────────────────
-aiohttp==3.9.5
+aiohttp==3.13.3
 
 # ─── Database ────────────────────────────────────────────────────────────────
 aiosqlite==0.20.0
@@ -19,7 +19,8 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 
 # ─── Image processing (default background image) ─────────────────────────────
-Pillow==10.3.0
+Pillow==12.1.1
 
 # ─── Utilities ───────────────────────────────────────────────────────────────
 psutil==5.9.8
+cryptography==44.0.1
